Cambios pre reset

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     </div> <!-- End page services -->
     
     <!-- Testimonials -->
-    <div class="vg-page p-0" id="testimonial">
+    <!-- <div class="vg-page p-0" id="testimonial">
       <div class="owl-carousel testi-carousel" style="background-image: url(assets/img/photo-2.jpg);">
         <div class="item">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, dicta atque. Voluptas illum quasi asperiores autem unde cupiditate temporibus quisquam iste rem dignissimos. Commodi placeat, quis omnis inventore asperiores sit.</p>
@@ -374,7 +374,8 @@
           <h4>Patrice Clark</h4>
         </div>
       </div>
-    </div> <!-- End testimonial -->
+    </div>  -->
+    <!-- End testimonial -->
     
     <!-- Portfolio page -->
     <div class="vg-page page-portfolio" id="portfolio">
@@ -395,8 +396,8 @@
 
         <div class="gridder my-3">
           <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-              <img src="assets/img/work/work-1.jpg" alt="">
+            <div class="img-place" data-src="assets/img/work/E-Commerce.png" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+              <img src="assets/img/work/E-Commerce.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Web Jump In</h5>
                 <p>Gimnasio</p>
@@ -404,17 +405,17 @@
             </div>
           </div>
           <div class="grid-item template wireframes wow zoomIn">
-            <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
-              <img src="assets/img/work/work-2.jpg" alt="">
+            <div class="img-place" data-src="assets/img/work/E-Commerce (1).png" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+              <img src="assets/img/work/E-Commerce (1).png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Web Cecilia Soria</h5>
-                <p>Paisajismo</p>
+                <p>Paisajismo, Portafolio</p>
               </div>
             </div>
           </div>
           <div class="grid-item apps ios wow zoomIn">
-            <div class="img-place" data-src="../assets/img/work/work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
-              <img src="assets/img/work/work-3.jpg" alt="">
+            <div class="img-place" data-src="assets/img/work/E-Commerce (2).png" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+              <img src="assets/img/work/E-Commerce (2).png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Web Constantino</h5>
                 <p>Ropa Deportiva</p>
@@ -566,7 +567,7 @@
               <hr class="divider">
               <ul class="list-unstyled">
                 <li>351 5223273</li>
-                <li><a target="_blanck" href="https://www.twitter.com/octatorres1/">Whatsapp</a></li>
+                <li><a target="_blanck" href="https://wa.me/543515223273">Whatsapp</a></li>
               </ul>
             </div>
           </div>
