--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <title>Octavio Torres</title>
   
-  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/o.png">
   
   <link rel="stylesheet" type="text/css" href="assets/css/themify-icons.css">
   
@@ -121,7 +121,7 @@
               <ul class="theme-list">
                 <li class="fg-dark"><b>De:</b> Buenos Aires, Arg.</li>
                 <li class="fg-dark"><b>Vivo en:</b> Córdoba, Arg.</li>
-                <li class="fg-dark"><b>Edad:</b> 18</li>
+                <li class="fg-dark"><b>Edad:</b> 19</li>
                 <li class="fg-dark"><b>Género:</b> Masc.</li>
               </ul>
             </div>
@@ -388,37 +388,37 @@
           <button class="btn btn-theme-outline selected" data-filter="*">All</button>
           <button class="btn btn-theme-outline" data-filter=".apps">Deportes</button>
           <button class="btn btn-theme-outline" data-filter=".template">Naturaleza</button>
-          <!-- <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
-          <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
+          <button class="btn btn-theme-outline" data-filter=".ios">Alimentos</button>
+          <!-- <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
           <button class="btn btn-theme-outline" data-filter=".graphic">Graphic</button>
           <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button> -->
         </div>
 
         <div class="gridder my-3">
-          <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/E-Commerce.png" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+          <div class="grid-item ios wow zoomIn">
+            <div class="img-place" data-src="assets/img/work/E-Commerce.png" data-fancybox data-caption="<h5 class='fg-theme'>E-Commerce Animal Food</h5> <p>Alimentos</p>">
               <img src="assets/img/work/E-Commerce.png" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Web Jump In</h5>
-                <p>Gimnasio</p>
+                <h5 class="fg-theme">E-Commerce Animal Food</h5>
+                <p>Alimentos</p>
               </div>
             </div>
           </div>
           <div class="grid-item template wireframes wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/E-Commerce (1).png" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="assets/img/work/E-Commerce (1).png" data-fancybox data-caption="<h5 class='fg-theme'>Web Cecilia Soria</h5> <p>Naturaleza, Portafolio</p>">
               <img src="assets/img/work/E-Commerce (1).png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Web Cecilia Soria</h5>
-                <p>Paisajismo, Portafolio</p>
+                <p>Naturaleza, Portafolio</p>
               </div>
             </div>
           </div>
-          <div class="grid-item apps ios wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/E-Commerce (2).png" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+          <div class="grid-item apps wow zoomIn">
+            <div class="img-place" data-src="assets/img/work/E-Commerce (2).png" data-fancybox data-caption="<h5 class='fg-theme'>Web Jump In</h5> <p>Gimnasio</p>">
               <img src="assets/img/work/E-Commerce (2).png" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Web Constantino</h5>
-                <p>Ropa Deportiva</p>
+                <h5 class="fg-theme">Web Jump In</h5>
+                <p>Gimnasio</p>
               </div>
             </div>
           </div>
